# magnet

./: Cargo.toml  README.md
src/: archive.rs  cli.rs  colors.rs  errors.rs  github.rs  install.rs  main.rs  manager.rs  registry.rs  types.rs  utils.rs
