[package]
name = "magnet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
zip = "0.6"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true