[package]
name = "magnet"
version = "3.0.0"
edition = "2024"
authors = ["Nima Naseri <nerdnull@proton.me>"]
description = "The Rust-Based GitHub Package Manager"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1.0"
indicatif = "0.17"
owo-colors = "4.1"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
supports-color = "3.0"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
zip = "2.2"
chrono = "0.4"
anstyle = "1.0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
