[package]
name = "magnet"
version = "2.0.0"
edition = "2024"
authors = ["Nima Naseri <nerdnull@proton.me>"]
description = "Industrial strength GitHub repository scraper"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
zip = "0.6"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true